ContactUs Page Header and title spacing fix

--- a/skin/frontend/mariatash/redesign/css/redesign.css
+++ b/skin/frontend/mariatash/redesign/css/redesign.css
@@ -4650,7 +4650,7 @@ td.cart_col2 {
 	margin-bottom: 0;
 }
 .contact-us-wrapper {
-  margin-top: 40px;
+  margin-top: 1.5rem;
 }
 .cms-contact-us h1 {
   font-size: 22px !important;
@@ -4706,7 +4706,7 @@ td.cart_col2 {
 	cursor: pointer;
 }
 .contact-us-wrapper h1 {
-  font-size: 30px !important;
+  font-size: 32px !important;
 }
 .catalog-category-view .celebPopup .product-name {
   margin-bottom: 13px;
